# rust-rest

./: .env  Cargo.toml  README.md  docker-compose.yml
.circleci/: config.yml
.config/: nextest.toml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: junie.yml
.sqlx/: query-1b925eb9a8029b0f6ace794670c5c3c15e52c8f067e6fff52ea0bb04e3bf5c1e.json  query-1ddd6e803d254afe113618d1e6a91271493aad0f4b66c55c89398cb13aab5c20.json  query-39a7bae5028672bb027cdad6c9c0285924e1856cf550d12a84738eac6dad1b3b.json  query-3a1243d6828b52b5a122a042d57c939e615e3cdc3dad5539ac5a8c3e66f2bf3f.json  query-458042e043927d1ac9ffa77182d681a27d0f47c2f6a18c39383634192b092bbd.json  query-6469d799658f9cc1a8aa80152ce5d5409ab133ef614ce0c660ea8578052c5a38.json  query-714c1429fd0b7c3fb8d6a6a9eec9acbb7397821d281268054cd6a9c39f47e2c4.json  query-7ef65c00695274e87ddb7fda4dac341d5a765d6a4091321b42da5a203612883c.json  query-a590f10f9618632d5fd170a03decfd92332c67ca3a70af742f6e9d68361b9629.json  query-fa40e4e1f2f816a110e3d1e0aa87cebd6161a26482d131c970776a638a5475ae.json
backing-services-data/: .gitignore  tempo.yaml
doc/: README.md  api_documentation.md  architecture_layers.md  configuration.md  database.md  index.md  logging.md  testing.md
postgres-scripts/: postgres-setup.sql
src/: api.rs  app_env.rs  db.rs  dto.rs  entity.rs  external_connections.rs  lib.rs  logging.rs  main.rs  persistence.rs  route_error.rs  routes.rs  routes_axum.rs  routing_utils.rs
src/api/: mod.rs  swagger_main.rs  test_util.rs  todo.rs  tracing_prop.rs  user.rs
src/domain/: mod.rs  test_util.rs  todo.rs  user.rs
src/dto/: task.rs  user.rs
src/integration_test/: mod.rs  test_util.rs  user_api.rs
src/persistence/: db_todo_driven_ports.rs  db_user_driven_ports.rs  mod.rs
tests/: test_util.rs
