[package]
name = "sample-rest"
version = "1.0.0"
authors = ["Evan Rittenhouse"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.31"
derive_more = {  version = "1.0", features = ["display", "error"] }
validator = { version = "0.15.0", features = ["derive"] }
axum = "0.7"
axum-macros = "0.4"
tokio = { version = "1.19", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = {  version = "0.28", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "serialize"]}
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"]}
opentelemetry-http = "0.27"
opentelemetry = "0.27"
tower = "0.5"
tower-http = {version = "0.6", features = ["trace"]}
utoipa = { version = "4.2" }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
reqwest-tracing = {  version = "0.5", features = ["opentelemetry_0_27"] }
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
reqwest-middleware = "0.4.2"

[dev-dependencies]
futures-core = "0.3.29"
hyper = "1.2.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.5"
speculoos = "0.11.0"
tokio = { version = "1.19.2", features = ["sync"] }
tower = "0.4.13"

[features]
integration_test = []
