[package]
name = "sample-rest"
version = "1.0.0"
authors = ["Evan Rittenhouse"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = "1.0"
serde_json = "1.0"
derive_more = { version = "1.0", features = ["display", "error", "from"] }
validator = { version = "0.15.0", features = ["derive"] }
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.68"
anyhow = "1.0.70"
futures = "0.3.30"
utoipa = { version = "4.2.0" }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

[dev-dependencies]
futures-core = "0.3.29"
hyper = "1.2.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
rand = "0.8.5"
speculoos = "0.11.0"
tokio = { version = "1.19.2", features = ["sync"] }
tower = "0.4.13"

[features]
integration_test = []
